# sggw_lab_2_1_context_managers

./: README.md  pyproject.toml
assets/: text.txt
src/: file_writer.py  logger.py  main.py  safe_division.py
