[project]
name = "lab-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomasz Szłapa",email = "tomasz.szlapa@gmail.com"}
]
readme = "README.md"
requires-python = ">=2.7"
dependencies = [
]

[tool.poetry]
packages = [{include = "lab_2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
